set high z-index on hidden container so it fades out smoothly , pointer events will stop this affecting other elements

--- a/src/popup/style.scss
+++ b/src/popup/style.scss
@@ -15,7 +15,7 @@ body.popup-active {
 .popup-container {
 	content-visibility: auto;
 	opacity: 0;
-	z-index: -1;
+	z-index: 10;
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -40,7 +40,6 @@ body.popup-active {
 	&.open {
 		opacity: 1;
 		transform: translate(-50%, -50%) scale(1);
-		z-index: 11;
 		pointer-events: auto;
 	}
 }
